<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"

        tools:ignore="ExtraText">


    </item>
<item android:title="@string/activity"

    android:id="@+id/navigation_activities"
    android:icon="@drawable/ic_fitness_center_black_24dp"
    tools:ignore="ExtraText">

</item>
    <item android:title="@string/challenges"

        android:id="@+id/navigation_challenges"
        android:icon="@drawable/ic_directions_run_black_24dp"
        tools:ignore="ExtraText">

    </item>
    <item android:title="@string/settings"

        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        tools:ignore="ExtraText">

    </item>
</menu>